manifests/go-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"traefik.ingress.kubernetes.io/router.entrypoints":"websecure","traefik.ingress.kubernetes.io/router.tls":"true","traefik.ingress.kubernetes.io/router.tls.certresolver":"letsencrypt"},"name":"go-api-ingress","namespace":"default"},"spec":{"rules":[{"host":"api.iyata.duckdns.org","http":{"paths":[{"backend":{"service":{"name":"go-api-service-1","port":{"number":4000}}},"path":"/","pathType":"Prefix"}]}}]}}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  creationTimestamp: "2025-12-04T10:52:32Z"
  generation: 1
  name: go-api-ingress
  namespace: default
  resourceVersion: "651092"
  uid: 8ad14142-208d-426f-8ef4-45de62c222ee
spec:
  ingressClassName: traefik
  rules:
  - host: api.iyata.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: go-api-service-1
            port:
              number: 4000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
