manifests/go-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-service-1
  labels:
    instance: "1"
spec:
  selector:
    app: go-api
    tier: backend
    instance: "1"
  ports:
  - protocol: TCP
    port: 4000              # ← Puerto interno del Service
    targetPort: 4000        # ← Puerto del contenedor (tu API)
  type: LoadBalancer            # ← ⭐ Para acceso externo en desarrollo
